--- a/chance/css/style.css
+++ b/chance/css/style.css
@@ -17,7 +17,21 @@ h1 {
 	font-size: 30px;
 	font-weight: 900;
 }
-
 .navbar-static-top {
   margin-bottom: 19px;
+}
+.chance {
+	padding: 50px 0px 30px 0px;
+	font-size: 25px;
+}
+.chance-number {
+	color: #fff;
+  	background-color: #777;
+  	border-color: #4cae4c;
+  	display: inline-block;
+  	border-radius: 50%;
+  	width: 200px;
+  	height: 200px;
+	padding: 50px 0px 30px 0px;
+	font-size: 70px;
 }
