--- a/chance/css/style.css
+++ b/chance/css/style.css
@@ -37,7 +37,11 @@ h1 {
 }
 .btn-all{
 	width: 100%;
+	height: 65px;
 	font-size: 25px;
+}
+.btn-lg{
+	height: 65px;
 }
 .col-xs-6{
 	padding-right: 0px;
